--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
   </head>
   <body>
     <h1>Challenge starts soon</h1>
+    <table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>distance</th>
+      <th>full_name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>400</td>
+      <td>Valentina4 valelast4</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>300</td>
+      <td>Valentina3 valelast3</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>200</td>
+      <td>Valentina2 valelast2</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>100</td>
+      <td>Valentina valelast</td>
+    </tr>
+  </tbody>
+</table>
 <style>
 h1 {
   color: teal;
